# qa_guru_python_8_18

./: README.md  pyproject.toml
